# MCP-Python-Proyect

./: .env  .gitignore  README.md  launch.py  pyproject.toml  pyrightconfig.json
app/: main.py  main_api.py  server.py  test_mcp.py
app/api/: bot_router.py
app/db/: config.py  connect.py
app/mcp/: agent.py
app/models/: modelos.py
app/models/enums/: appointment_state.py
app/repository/: appointment_repo.py  client_repo.py  contact_repo.py
app/schemas/: appointment.py  chat.py  client.py  client_contact.py
app/services/: citas_service.py  client_contact.py  client_service.py
app/test/: test_client_create.py  test_connect.py  test_contacs.py  test_service_create.py  test_services.py
